<resources>
    <string name="app_name">meshIM</string>

    <!-- Notification text -->
    <string name="notification_title">meshIM is Running</string>
    <string name="notification_text">Tap to go offline.</string>

    <!-- Tab titles -->
    <string name="tab_in_range">In Range</string>
    <string name="tab_messages">Messages</string>
    <string name="tab_account">Account</string>

    <!-- Username editing messages -->
    <string name="username">Username</string>
    <string name="username_length">%d/20</string>
    <string name="username_length_empty">0/20</string>
    <string name="username_prompt">Create a username</string>
    <string name="username_sub_prompt">Change it anytime</string>
    <string name="username_warning_message_empty">Username cannot be empty</string>
    <string name="username_warning_message_length">Username over 20 characters</string>

    <!-- Settings page -->
    <string name="settings_notifications_description">New message notifications</string>
    <string name="settings_online_description">Send and receive messages.</string>
    <string name="settings_online_icon_content_description">meshIM online indicator</string>
    <string name="settings_rightmesh_description">RightMesh wallet</string>
    <string name="settings_rightmesh_icon_content_description">RightMesh logo</string>

    <string name="title_onboarding_username_activity">Create a username</string>
    <string name="title_choose_avatar">Select your avatar </string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="type_message">Type message</string>
    <string name="in_range">IN RANGE</string>
    <string name="user_avatar_description">User avatar</string>
    <string name="selected_avatar_description">Current selected user avatar</string>
    <string name="tab_icon_description">Tab icon</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="online_available">Available</string>
    <string name="edit">Edit</string>
    <string name="choose_avatar_image_description">Avatar option.</string>
    <string name="chat_send_button_description">Send icon.</string>
    <string name="settings_edit_avatar_desription">Change user avatar.</string>
    <string name="empty_message_text2">Start a conversation with anyone in Range.</string>
    <string name="empty_message_text1">No messages yet.</string>
    <string name="empty_inrange_text">Looking for people In Range.</string>
    <string name="get_user_details">Getting user details...</string>
</resources>
