<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/dialog_username_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/meshim_margin_medium"
        android:layout_marginRight="@dimen/meshim_margin_medium"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textNoSuggestions|textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_username_error_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginLeft="@dimen/meshim_margin_medium"
            android:layout_marginRight="@dimen/meshim_margin_medium"
            android:text="@string/username_sub_prompt" />

        <TextView
            android:id="@+id/dialog_username_character_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/meshim_margin_medium"
            android:layout_marginRight="@dimen/meshim_margin_medium"
            android:text="@string/username_length_empty"
            android:textColor="@color/colorAccent"
            android:textAlignment="textEnd"
            android:gravity="end" />
    </LinearLayout>
</LinearLayout>