<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.left.meshim.activities.OnboardingUsernameActivity">

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="@color/greenFade"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textNoSuggestions|textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/username_prompt"
        android:textColor="@color/greenFade"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/userNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="44dp" />

    <TextView
        android:id="@+id/characterCountText"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:width="26dp"
        android:height="14dp"
        android:lineSpacingMultiplier="1.17"
        android:text="@string/username_length"
        android:textColor="@color/greenFade"
        app:layout_constraintBottom_toTopOf="@+id/saveUserNameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saveUserNameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@color/greenFade"
        android:clickable="false"
        android:elevation="0dp"
        android:fontFamily="sans-serif"
        android:text="@string/save"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />

    <TextView
        android:id="@+id/errrorText"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/change_it_anytime"
        app:layout_constraintBottom_toTopOf="@+id/saveUserNameButton"
        app:layout_constraintEnd_toStartOf="@+id/characterCountText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        app:layout_constraintVertical_bias="0.888" />

</android.support.constraint.ConstraintLayout>
